# localization

./: .gitignore  CMakeLists.txt  README  README.ipynb  README.md  array_data.txt  drive_straight.py  localization_bag1_2022-03-29-19-23-29.bag  localization_bag2_2022-03-29-19-24-34.bag  localization_bag3.bag  package.xml  params.yaml  setup.cfg  setup.py  test_sensor_model.sh
.ipynb_checkpoints/: README-checkpoint.ipynb
01/: question2.py  solutions_go_here.py  writeup.typ
assets/: debug_precomputed_table.pkl
autograder/: ground_truth_basement_encrypted.npy  solutions_go_here.py
launch/: localize.launch  localize.launch.xml  localize_real_env.launch  localize_real_env.launch.xml  map_server.launch
launch/unit_tests/: motion_model_test.launch.py  sensor_model_test.launch.py  test_map.launch.xml
localization/: motion_model.py  params.yaml  particle_filter.py  real_params.yaml  scan_simulator_2d 2.cpp  scan_simulator_2d.pyx  sensor_model.py
localization/test/: __init__.py  motion_model_test.py  sensor_model_test.py  test_params.yaml
maps/: basement_fixed.map.yaml
src/: motion_model.py  particle_filter.py  scan_simulator_2d.pyx  sensor_model.py  setup.py  utils.py
src/localization/: individual_probability.py  motion_model.py  particle_filter.py  sensor_model.py  setup.py
test/: __init__.py  test_motion_model.py  test_sensor_model.py  unit_tests.test
test/maps/: test_map.yaml
test_map/: test_map.yaml
utils/: initialpose_pub.py  initialpose_sub.py
