<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>localization</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="sebastianag2002@gmail.com">sebastian</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <build_depend>racecar_simulator</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>tf2_sensor_msgs</build_depend>
    <build_depend>tf_transformations</build_depend>

    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>tf2_sensor_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>tf_transformations</exec_depend>

    <test_depend>python3-pytest</test_depend>


    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
